# LabUI

./: .gitignore  README.md  build_library.sh  manuscript-reviewer.skill  requirements.txt  scientific-writer.skill  setup_mac.sh  start.sh
.github/agents/: Review.agent.md
Local_Rag/: .gitignore
submission_strategy/: README.md  pyproject.toml
submission_strategy/data/: journals.yaml  policy.toml
submission_strategy/integration/: __init__.py  enrichment.py  lab_view.py  linking.py  rag_integration.py  search.py
submission_strategy/jfr/: __init__.py  cli.py
submission_strategy/jfr/config/: __init__.py  policy.py  settings.py
submission_strategy/jfr/corpus/: __init__.py  builder.py  embedder.py
submission_strategy/jfr/db/: __init__.py  schema.py
submission_strategy/jfr/matching/: __init__.py  engine.py
submission_strategy/jfr/templates/: research_lab.html
submission_strategy/jfr/tracker/: __init__.py  state_machine.py
submission_strategy/jfr/web/: app.py  corpus_tasks.py  rag_routes.py
submission_strategy/jfr/web/templates/: _results_partial.html  base.html  dashboard.html  experiment_detail.html  experiment_form.html  experiments.html  journals.html  manuscript_edit.html  manuscript_new.html  manuscripts.html  recommend.html  research_chat.html  research_graph.html  research_lab.html  research_memory.html  research_notes.html  research_paper_view.html  research_search.html  research_style.html  research_upload.html  schedule.html  submission_detail.html  submissions.html
submission_strategy/scripts/: update_impact_factors.py
(+32 files in other folders)
