[project]
name = "jfr"
version = "0.1.0"
description = "Journal-Fit Recommender and Submission Tracker"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pyyaml>=6",
    "tomli>=2; python_version < '3.11'",
    "feedparser>=6",
    "rank-bm25>=0.2",
    "qdrant-client>=1.9",
    "sentence-transformers>=3",
    "torch>=2.3",
    "pydantic>=2",
    "apscheduler>=3.10",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3",
    "aiofiles>=23",
    "peft>=0.19.1",
    "python-multipart>=0.0.28",
]

[project.scripts]
jfr = "jfr.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["jfr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
